Handling user request with connect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>INDX</title>
+    <title>INDEX</title>
 </head>
 <body>
     <h1> AWESOME WEBSITE</h1>
